CLBWEBSITE-108 fixed horizontal scrollbar bug

--- a/src/styles/partials/_forms.scss
+++ b/src/styles/partials/_forms.scss
@@ -56,6 +56,9 @@ label {
 
   input[type="submit"] {
   	display: inline-block;
+  }
+
+  input[type="submit"], input[type="radio"], input[type="checkbox"] {
   	width: auto;
   }
 
